# baph

./: .gitignore  CMakeLists.txt  breakables.odin  buildings.odin  camera.odin  enemies.odin  game.odin  items.odin  level.odin  minions.odin  player.odin  title_screen.odin  ui.odin  weapons.odin  world.odin
.cache/clangd/index/: gc_camera.c.0A083A7B29E211D6.idx  gc_enemies.c.30BA450CEFD330DE.idx  gc_game.c.FA083B507CAA6D79.idx  gc_game.h.529E10E60EF8480B.idx  gc_player.c.1C826294FC67D027.idx  gce_game.c.BA418CD7C924D98D.idx  gce_game.h.DFF4DFFA5C840AD3.idx  gce_math.c.CC6CFF59DAEA9B8C.idx  gce_math.h.5AC3AF818292255C.idx  gce_rendering.c.26C13E2DA1836FB2.idx  gce_rendering.h.0C7B1364C241B308.idx  gce_utils.c.B6A7F1EFF1E6C1EF.idx  gce_utils.h.7B348966F14CEE83.idx  glad.c.20EE22D1CEF474B7.idx  glad.h.04BAEB4C26D80B74.idx  khrplatform.h.8787472909A7BFBF.idx  stb.c.7372A663089BBEF1.idx  stb_image.h.3E08DF3921188A59.idx  stb_truetype.h.44F9BF8EF1EFA277.idx
assets/shaders/: blend.frag
code/: ompile_commands.json
code/gc_engine/: CMakeLists.txt
code/gc_engine/include/: gce_math.h  gce_rendering.h  gce_utils.h
code/gc_engine/src/: gce_game.c  (+4 more)
code/god_complex/: CMakeLists.txt
code/god_complex/src/: gc_camera.c  gc_enemies.c  gc_game.c  gc_game.h  gc_level.c  gc_player.c  gc_tilemap.c  gc_tilemap.h
docs/: ideas.txt
gc_engine/: CMakeLists.txt
gc_engine/include/: gce_math.h  gce_rendering.h  gce_utils.h
gc_engine/src/: gce_game.c  gce_math.c  gce_rendering.c  gce_utils.c
god_complex/src/: enemies.odin  game.odin  gc_game.c  gc_game.h  gc_player.c  player.odin
